# sudoku

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: fireworks.rs  game.rs  generator.rs  i18n.rs  lib.rs  main.rs  solver.rs  ui.rs
