[package]
name = "sudoku"
version = "1.0.0"
edition = "2021"
description = "A fully offline Sudoku game built with Rust and egui"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
] }
egui_extras = { version = "0.31", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }


# Optimize for release with LTO
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

